k8s/kustomize/overlay/ingress/single/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: training-a.cl.monach.us
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
